--- a/Localisation/RU.json
+++ b/Localisation/RU.json
@@ -7,11 +7,12 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ОСТОРОЖНО】</color> -    ПОТОКОВАЯ ЗАГРУЗКА",
         "ABOUT": "О ПРОЕКТЕ",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment": "ABSOLUTE - Разработка приложения и его инфраструктуры\nNitro4CSR - Управление ресурсами и интеграция данных комьюнити\nFREYCKSSON - Обновление ресурсов\nMAINTAINERS - Создание и обновление данных комьюнити\n\nИздатель: ムRimgine Entertainment",
         "AUDIO": "АУДИО",
         "AUTOSHOW": "АВТОШОУ",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Автошоу <color=#FFD540>ПРО</color> режим  (тех. инфо)",
         "All the best races of the racers are here! Let's see this hall of fame": "Все лучшие результаты гонщиков находятся здесь! Давай посмотрим на этот зал славы",
         "And finally, click to see additional information about the car": "Нажми сюда, чтобы увидеть дополнительную информацию об автомобиле",
-        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Автошоу <color=#FFD540>ПРО</color> режим  (тех. инфо)",
         "Avatar": "Аватар",
         "BACK": "НАЗАД",
         "BEST DRIVER!": "ЛУЧШИЙ ГОНЩИК!",
@@ -25,30 +26,32 @@
         "CONNECTION FAILED": "ОШИБКА СОЕДИНЕНИЯ",
         "CREATORS": "СОЗДАТЕЛИ",
         "CREDITS": "ИНФО",
+        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB необходимо будет загрузить дополнительные данные: <color= #FFAA0D>{0}</color>. Убедитесь в том, что вы подключены к правильной сети - и начните загрузку",
         "Car name": "Имя автомобиля",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Ознакомьтесь со стоимостью каждой части, а также с эффективностью шестых деталей!",
         "City camera speed": "Чувствительность камеры",
         "Click here to change the leaderboard!": "Нажми здесь, чтобы сменить таблицу лидеров!",
         "Click to change car type!": "Нажми здесь, чтобы изменить состояние автомобиля!",
         "DYNO:": "ДИНО:",
+        "Download failed, check your internet connection and restart the app": "Ошибка загрузки, проверьте подключение к интеренету и перезапустите приложение",
         "Driver": "Гонщик",
         "ELITE MAX": "ЭЛИТ МАКС",
         "ELITE STOCK": "ЭЛИТ СТОК",
         "EXIT": "ВЫХОД",
         "Effects volume": "Громкость эффектов",
-        "FAVORITES": "ИЗБРАННЫЕ",
+        "Enable localisation": "Включить системный язык",
+        "FAVORITEs": "ИЗБРАННЫЕ",
         "FINAL DRIVE": "КОНЕЧНАЯ ПЕРЕДАЧА",
-        "Download failed, check your internet connection and restart the app": "Ошибка загрузки, проверьте подключение к интеренету и перезапустите приложение",
+        "FPS limiter": "Ограничитель FPS",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Наконец-то мы можем увидеть самых быстрых игроков и их машины. Пойдем посмотрим МИРОВЫЕ РЕКОРДЫ!",
         "Find out how many elite components you need to fully upgrade your car!": "Узнайте, сколько элитных компонентов вам понадобится для полной прокачки вашего автомобиля!",
-        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB необходимо будет загрузить дополнительные данные: <color= #FFAA0D>{0}</color>. Убедитесь в том, что вы подключены к правильной сети - и начните загрузку",
-        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Для работы приложения необходимо загрузить дополнительные данные, проверьте свое подключение к интернету и повторите попытку",
+        "GRAPHICS": "ГРАФИКА",
         "Gacha imports": "Импортные детали",
-        "Get updated information on how many Legends components you need to restore your car!": "Узнайте сколько компонентов Legends вам понадобится для восстановления вашего автомобиля!",
         "Get update!": "ОБНОВИТЬ!",
-        "You can see the best tuning settings here": "Здесь можно увидеть лучшие настройки тюнинга",
+        "Get updated information on how many Legends components you need to restore your car!": "Узнайте сколько компонентов Legends вам понадобится для восстановления вашего автомобиля!",
+        "Graphics quality": "Качество графики",
         "I know it already": "Я уже знаю",
-        "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "Инфраструктура приложения - ABS (@stasss125)\nПодготовка ресурсов - Nitro4CSR (@nitr04)\n\nТакже участвуют:\n- MAINTANERS\n- FREYCKSSON\n",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Для работы приложения необходимо загрузить дополнительные данные, проверьте свое подключение к интернету и повторите попытку",
         "Initializing database...": "Инициализация базы данных...",
         "LOADING SCREEN": "ЗАГРУЗОЧНЫЙ ЭКРАН",
         "Let's choose the unrestored version": "Давай выберем невосстановленный автомобиль",
@@ -85,7 +88,6 @@
         "There's finally an AUTOSHOW in the city, let me show you around?": "Наконец легендарный АВТОШОУ в городе, пойдем посмотрим?",
         "This car can be obtained by defeating the boss": "Чтобы получить эту машину нужно победить босса",
         "This car cannot be obtained anywhere": "Эту машину нельзя получить",
-        "You could have won this car in the following seasons:": "Эта призовая машина чемпионата команд. За следующие сезоны:",
         "This car is a part of a collection and can be purchased with collection credits.": "Этот автомобиль является частью коллекции и может быть приобретен за кредиты коллекций",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Это автошоу - здесь собрана информация обо всех автомобилях! Давай посмотрим",
         "This is the podium, the best cars and drivers show off here": "Это подиум, здесь красуются самые быстрые автомобили и гонщики",
@@ -95,13 +97,16 @@
         "UNRESTORED": "НЕВОССТАНОВЛЕННЫЙ",
         "UPGRADE DETAILED INFO": "ДЕТАЛЬНАЯ ИНФОРМАЦИЯ ОБ УЛУЧШЕНИЯХ",
         "Updating the database...": "Обновление базы данных...",
+        "Very Low|Low|Medium|High|Very High|Ultra": "Очень низкое|Низкое|Среднее|Высокое|Очень высокое|Ультра",
         "WORLD RECORDS": "МИРОВЫЕ РЕКОРДЫ",
         "WR CAR RATING": "МИРОВОЙ РЕЙТИНГ",
         "You can add important cars to favorites": "Можно добавлять важные автомобили в избранное",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Можно найти нужную машину по производителю или группам автомобилей. Есть даже раздел избранного!",
         "You can go straight to the AUTOSHOW, just click on the car!": "Ты можешь сразу перейти в АВТОШОУ, просто кликнув на машину!",
         "You can mark the cars you owned": "Можно отметить имеющиеся автомобили",
+        "You can see the best tuning settings here": "Здесь можно увидеть лучшие настройки тюнинга",
         "You can see the visual specs here": "Визуальные хар-ки можно посмотреть здесь",
+        "You could have won this car in the following seasons:": "Эта призовая машина чемпионата команд. За следующие сезоны:",
         "text coming soon...": "текст в разработке..."
     }
 }
