--- a/Localisation/ES.json
+++ b/Localisation/ES.json
@@ -7,11 +7,12 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE",
         "ABOUT": "ACERCA",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
         "All the best races of the racers are here! Let's see this hall of fame": "¡Las mejores carreras de los corredores están aquí! ¡Veamos este salón de la fama!",
         "And finally, click to see additional information about the car": "Y por último, haz clic para ver información adicional sobre el auto.",
-        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
         "Avatar": "Avatar",
         "BACK": "BACK",
         "BEST DRIVER!": "Mejor Conductor!",
@@ -25,30 +26,32 @@
         "CONNECTION FAILED": "CONEXIÓN FALLIDA",
         "CREATORS": "CREADORES",
         "CREDITS": "CREDITOS",
+        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "For CSR<color=yellow>2</color>-HUB Será necesario descargar datos: <color= #FFAA0D>{0}</color>, Asegúrese de no estar utilizando internet limitado y confirme la descarga.",
         "Car name": "Nombre del Auto",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Consulta el costos de cada parte, así como las Piezas de Nivel 6!",
         "City camera speed": "Velocidad de Camara",
         "Click here to change the leaderboard!": "Haga clic aquí para cambiar la clasificación!",
         "Click to change car type!": "Haga clic para cambiar el vehículo!",
         "DYNO:": "DYNO:",
+        "Download failed, check your internet connection and restart the app": "Descarga fallida, verifique la conexión a Internet he reinicie la aplicación",
         "Driver": "Conductor",
         "ELITE MAX": "ELITE MAX",
         "ELITE STOCK": "ELITE STOCK",
         "EXIT": "EXIT",
         "Effects volume": "Efectos de volumen",
+        "Enable localisation": "Enable localisation",
         "FAVORITEs": "FAVORITOS",
         "FINAL DRIVE": "TRANSMISIÓN",
-        "Download failed, check your internet connection and restart the app": "Descarga fallida, verifique la conexión a Internet he reinicie la aplicación",
+        "FPS limiter": "FPS limiter",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Por fin podemos ver a los jugadores más rápidos y sus autos. ¡Acompáñame, te lo mostraré!!",
         "Find out how many elite components you need to fully upgrade your car!": "Descubre cuántos componentes de élite necesitas para actualizar completamente tu auto!",
-        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "For CSR<color=yellow>2</color>-HUB Será necesario descargar datos: <color= #FFAA0D>{0}</color>, Asegúrese de no estar utilizando internet limitado y confirme la descarga.",
-        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Para el correcto funcionamiento es necesario descargar datos adicionales, por favor verifique su conexión a internet y vuelva a intentarlo.",
+        "GRAPHICS": "GRAPHICS",
         "Gacha imports": "Importaciones",
-        "Get updated information on how many Legends components you need to restore your car!": "Obtén información actualizada sobre cuántos componentes Legends necesitas para restaurar tu auto!",
         "Get update!": "Obtener actualización!",
-        "You can see the best tuning settings here": "Aquí puedes ver las mejores configuraciones de ajuste.",
+        "Get updated information on how many Legends components you need to restore your car!": "Obtén información actualizada sobre cuántos componentes Legends necesitas para restaurar tu auto!",
+        "Graphics quality": "Graphics quality",
         "I know it already": "ya lo se",
-        "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Para el correcto funcionamiento es necesario descargar datos adicionales, por favor verifique su conexión a internet y vuelva a intentarlo.",
         "Initializing database...": "Inicializando la base de datos...",
         "LOADING SCREEN": "PANTALLA DE CARGA",
         "Let's choose the unrestored version": "Elijamos la versión sin restaurar",
@@ -85,7 +88,6 @@
         "There's finally an AUTOSHOW in the city, let me show you around?": "Por fin hay un AUTOSHOW en la ciudad, déjame mostrarte los alrededores.",
         "This car can be obtained by defeating the boss": "Este auto se puede obtener derrotando al jefe.",
         "This car cannot be obtained anywhere": "Este auto no se puede conseguir en ningún lado.",
-        "You could have won this car in the following seasons:": "Este auto podría haber ganado el campeonato de equipos. En las temporadas siguientes:",
         "This car is a part of a collection and can be purchased with collection credits.": "Este auto es parte de una colección y se puede comprar con créditos de colección..",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Esto es un autoshow: ¡aquí encontrarás información sobre todos los autos! Veamos.",
         "This is the podium, the best cars and drivers show off here": "Este es el podio, los mejores autos y pilotos se lucen aquí",
@@ -95,13 +97,16 @@
         "UNRESTORED": "SIN RESTAURAR",
         "UPGRADE DETAILED INFO": "INFORMACIÓN DETALLADA DE LA ACTUALIZACIÓN",
         "Updating the database...": "Actualización de la base de datos...",
+        "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
         "WORLD RECORDS": "RÉCORDS MUNDIALES",
         "WR CAR RATING": "WR CLASIFICACIÓN DEL AUTO",
         "You can add important cars to favorites": "Puedes agregar autos importantes a tus favoritos",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Puedes encontrar el auto que necesitas por fabricante o grupo de autos. Incluso hay una sección de favoritos.!",
         "You can go straight to the AUTOSHOW, just click on the car!": "YPuedes ir directamente al autoshow, simplemente haz clic en el auto.!",
         "You can mark the cars you owned": "Puedes marcar los autos que tienes",
+        "You can see the best tuning settings here": "Aquí puedes ver las mejores configuraciones de ajuste.",
         "You can see the visual specs here": "Puedes ver las especificaciones visuales aquí",
+        "You could have won this car in the following seasons:": "Este auto podría haber ganado el campeonato de equipos. En las temporadas siguientes:",
         "text coming soon...": "texto próximamente..."
     }
 }
