--- a/Localisation/PT-BR.json
+++ b/Localisation/PT-BR.json
@@ -7,11 +7,12 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE",
         "ABOUT": "ABOUT",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
         "All the best races of the racers are here! Let's see this hall of fame": "All the best races of the racers go here! Let's see this hall of fame",
         "And finally, click to see additional information about the car": "And finally, click to see additional information about the car",
-        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
         "Avatar": "Avatar",
         "BACK": "BACK",
         "BEST DRIVER!": "BEST DRIVER!",
@@ -25,30 +26,32 @@
         "CONNECTION FAILED": "CONNECTION FAILED",
         "CREATORS": "CREATORS",
         "CREDITS": "CREDITS",
+        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download",
         "Car name": "Car name",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Check out the cost of each part, as well as the effects of the sixth parts!",
         "City camera speed": "City camera speed",
         "Click here to change the leaderboard!": "Click here to change the leaderboard!",
         "Click to change car type!": "Click to change car type!",
         "DYNO:": "DYNO:",
+        "Download failed, check your internet connection and restart the app": "Failed download, check internet connection and restart app",
         "Driver": "Driver",
         "ELITE MAX": "ELITE MAX",
         "ELITE STOCK": "ELITE STOCK",
         "EXIT": "EXIT",
         "Effects volume": "Effects volume",
-        "FAVORITES": "FAVORITEs",
+        "Enable localisation": "Enable localisation",
+        "FAVORITEs": "FAVORITEs",
         "FINAL DRIVE": "FINAL DRIVE",
-        "Download failed, check your internet connection and restart the app": "Failed download, check internet connection and restart app",
+        "FPS limiter": "FPS limiter",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Finally we can see the fastest players and their cars. Come with me, I'll show you!",
         "Find out how many elite components you need to fully upgrade your car!": "Find out how many elite components you need to fully upgrade your car!",
-        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download",
-        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "For the correct work it is necessary to download additional data, please check your internet connection and try again",
+        "GRAPHICS": "GRAPHICS",
         "Gacha imports": "Gacha imports",
-        "Get updated information on how many Legends components you need to restore your car!": "Get up-to-date information on how many Legends components you need to restore your car!",
         "Get update!": "Get update!",
-        "You can see the best tuning settings here": "Here you can see the best tuning settings",
+        "Get updated information on how many Legends components you need to restore your car!": "Get up-to-date information on how many Legends components you need to restore your car!",
+        "Graphics quality": "Graphics quality",
         "I know it already": "I already know",
-        "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "For the correct work it is necessary to download additional data, please check your internet connection and try again",
         "Initializing database...": "Initializing the database...",
         "LOADING SCREEN": "LOADING SCREEN",
         "Let's choose the unrestored version": "Let's choose the unrestored version",
@@ -85,7 +88,6 @@
         "There's finally an AUTOSHOW in the city, let me show you around?": "There's finally an AUTOSHOW in city, let me show you around?",
         "This car can be obtained by defeating the boss": "This car can be obtained by defeating the boss",
         "This car cannot be obtained anywhere": "This car cannot be obtained anywhere",
-        "You could have won this car in the following seasons:": "This car could have won the teams championship. In the following seasons:",
         "This car is a part of a collection and can be purchased with collection credits.": "This car is part of a collection and can be purchased with collection credits.",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "This is the AUTOSHOW - information about all the cars are collected here! Let's see",
         "This is the podium, the best cars and drivers show off here": "This is the podium, the best cars and drivers show off here",
@@ -95,13 +97,16 @@
         "UNRESTORED": "UNRESTORED",
         "UPGRADE DETAILED INFO": "UPGRADE DETAILED INFO",
         "Updating the database...": "Updating the database...",
+        "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
         "WORLD RECORDS": "WORLD RECORDS",
         "WR CAR RATING": "WR CAR RATING",
         "You can add important cars to favorites": "You can add important cars to favorites",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "You can find the car you need by manufacturers or car groups. There is even a favorites section!",
         "You can go straight to the AUTOSHOW, just click on the car!": "You can go straight to the AUTOSHOW, just click on the car!",
         "You can mark the cars you owned": "You can mark the cars you owned",
+        "You can see the best tuning settings here": "Here you can see the best tuning settings",
         "You can see the visual specs here": "You can see the visual specs here",
+        "You could have won this car in the following seasons:": "This car could have won the teams championship. In the following seasons:",
         "text coming soon...": "text coming soon..."
     }
 }
