--- a/Localisation/ZH-TW.json
+++ b/Localisation/ZH-TW.json
@@ -7,11 +7,12 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> -    下載量大",
         "ABOUT": "關于",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment",
         "AUDIO": "音響",
         "AUTOSHOW": "車展",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "車展 <color=#FFD540>PRO</color> 模式  (technical info)",
         "All the best races of the racers are here! Let's see this hall of fame": "車手們的最佳賽事都在這裏! 讓我們看看這個名人堂",
         "And finally, click to see additional information about the car": "最後，點擊查看車輛的額外資訊",
-        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "車展 <color=#FFD540>PRO</color> 模式  (technical info)",
         "Avatar": "頭像",
         "BACK": "返回",
         "BEST DRIVER!": "最佳車手!",
@@ -25,30 +26,32 @@
         "CONNECTION FAILED": "連綫失敗",
         "CREATORS": "創建者",
         "CREDITS": "特別鳴謝",
+        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB 需要下載數據: <color= #FFAA0D>{0}</color>，請確認不是使用受限網絡后確認下載程序",
         "Car name": "車名",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "檢查各個零件的價格，以及第六級升級的作用!",
         "City camera speed": "城市攝像機的速度",
         "Click here to change the leaderboard!": "點擊這裏更換排行榜!",
         "Click to change car type!": "點擊更換車種!",
         "DYNO:": "測功機:",
+        "Download failed, check your internet connection and restart the app": "下載失敗，檢查網絡連接后重啓應用",
         "Driver": "車手",
         "ELITE MAX": "精英滿級",
         "ELITE STOCK": "精英原廠",
         "EXIT": "離開",
         "Effects volume": "音效聲量",
-        "FAVORITES": "最愛",
+        "Enable localisation": "Enable localisation",
+        "FAVORITEs": "最愛",
         "FINAL DRIVE": "最終傳動",
-        "Download failed, check your internet connection and restart the app": "下載失敗，檢查網絡連接后重啓應用",
+        "FPS limiter": "FPS limiter",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "我們終於可以查看最快玩家和他們的車輛。跟我來，我給你看看!",
         "Find out how many elite components you need to fully upgrade your car!": "查看升滿車輛需要多少精英元件!",
-        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB 需要下載數據: <color= #FFAA0D>{0}</color>，請確認不是使用受限網絡后確認下載程序",
-        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "爲了確保正確運行需下載額外數據，請檢查網絡連接后重試",
+        "GRAPHICS": "GRAPHICS",
         "Gacha imports": "抽獎進口",
-        "Get updated information on how many Legends components you need to restore your car!": "獲取和修復傳奇車輛所需的元件數量有關的最新消息!",
         "Get update!": "獲取更新!",
-        "You can see the best tuning settings here": "你可以在這裏查看最佳調節",
+        "Get updated information on how many Legends components you need to restore your car!": "獲取和修復傳奇車輛所需的元件數量有關的最新消息!",
+        "Graphics quality": "Graphics quality",
         "I know it already": "我已知曉",
-        "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "基礎結構源自 ABS (@stasss125)\n資源源自 Nitro4CSR (@nitr04)\n\n也參與其中:\n- MAINTANERS\n- FREYCKSSON\n",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "爲了確保正確運行需下載額外數據，請檢查網絡連接后重試",
         "Initializing database...": "正在初始化數據庫...",
         "LOADING SCREEN": "加載屏幕",
         "Let's choose the unrestored version": "我們來選擇未修復的版本",
@@ -85,7 +88,6 @@
         "There's finally an AUTOSHOW in the city, let me show you around?": "城市裏終於有個車展了，要不要我帶你看看？",
         "This car can be obtained by defeating the boss": "這輛車可通過擊敗領袖獲取",
         "This car cannot be obtained anywhere": "這輛車無法獲取",
-        "You could have won this car in the following seasons:": "這輛車可以在以下賽季裏贏取:",
         "This car is a part of a collection and can be purchased with collection credits.": "這輛車屬於某個收藏的一部分，且可透過收藏積分購買",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "這是個車展 - 這裏收著所有車輛的資訊！ 我們來看看",
         "This is the podium, the best cars and drivers show off here": "這裏是頒獎臺，最佳的車輛和車手都展示在這裏",
@@ -95,13 +97,16 @@
         "UNRESTORED": "未修復",
         "UPGRADE DETAILED INFO": "升級詳細資訊",
         "Updating the database...": "正在更新數據庫...",
+        "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
         "WORLD RECORDS": "世界紀錄",
         "WR CAR RATING": "世界紀錄的車輛積分",
         "You can add important cars to favorites": "你可以把重要的車輛加入最愛裏",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "你可以區分廠家或車種查尋車輛。甚至還有最愛的選項！",
         "You can go straight to the AUTOSHOW, just click on the car!": "你可以直接前往車展，只需點擊車輛！",
         "You can mark the cars you owned": "你可以標記已擁有的車輛",
+        "You can see the best tuning settings here": "你可以在這裏查看最佳調節",
         "You can see the visual specs here": "你可以在這裏查看外觀規格",
+        "You could have won this car in the following seasons:": "這輛車可以在以下賽季裏贏取:",
         "text coming soon...": "即將來臨..."
     }
 }
