--- a/Localisation/DE.json
+++ b/Localisation/DE.json
@@ -1,112 +1,112 @@
 {
     "TranslationsData": {
-        " (elite max)": " (elite max)",
-        " (unrestored)": " (unrestored)",
-        " records": " records",
-        " sec": " sec",
+        " (elite max)": " (Elite Max)",
+        " (unrestored)": " (unrestauriert)",
+        " records": " Rekorde",
+        " sec": " s",
         "...": "...",
-        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE",
-        "ABOUT": "ABOUT",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment",
+        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ACHTUNG】</color> -    Großer Download",
+        "ABOUT": "ÜBER",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nMAINTAINERS - Creating and updating community data\n\nPublisher: ムRimgine Entertainment": "ABS - Infrastruktur und Appaufbau\nNitro4CSR - Daten-Management und Integration von Community-Daten\nFREYCKSSON - Datenaktualisierung\nMAINTAINERS - erstellen und aktualisieren von Community-Daten\n\nPublisher: ムRimgine Entertainment",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
-        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
-        "All the best races of the racers are here! Let's see this hall of fame": "All the best races of the racers go here! Let's see this hall of fame",
-        "And finally, click to see additional information about the car": "And finally, click to see additional information about the car",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technische Infos)",
+        "All the best races of the racers are here! Let's see this hall of fame": "Die besten Zeiten von Fahrern findest du hier",
+        "And finally, click to see additional information about the car": "Zum Abschluss, tippe hier für Zusatzinformationen über ein Auto",
         "Avatar": "Avatar",
-        "BACK": "BACK",
-        "BEST DRIVER!": "BEST DRIVER!",
-        "BEST:": "BEST:",
-        "BOSS CAR": "BOSS CAR",
-        "Basic specs and the car rating of the tier": "Basic specs and the car rating at the tier",
-        "Best result and racer. Click to watch the best shift video!": "Best result and racer. Click to watch the best shift video!",
-        "Boss time: ": "Boss time: ",
-        "CAR INFO (from Vision spreadsheet)": "CAR INFO (vision)",
-        "CONFIRM CHANGES": "CONFIRM CHANGES",
-        "CONNECTION FAILED": "CONNECTION FAILED",
-        "CREATORS": "CREATORS",
+        "BACK": "ZURÜCK",
+        "BEST DRIVER!": "BESTER FAHRER!",
+        "BEST:": "BESTE:",
+        "BOSS CAR": "BOSS AUTO",
+        "Basic specs and the car rating of the tier": "Basis Varianten und Bewertung des Autos in dessen Klasse",
+        "Best result and racer. Click to watch the best shift video!": "Beste Zeit und der Fahrer. Tippe zum aufrufen des Videos mit Schaltanweisungen.",
+        "Boss time: ": "Boss Zeit: ",
+        "CAR INFO (from Vision spreadsheet)": "AUTO INFO (Project Vision)",
+        "CONFIRM CHANGES": "ÄNDERUNGEN BESTÄTIGEN",
+        "CONNECTION FAILED": "VERBINDUNG FEHLGESCHLAGEN",
+        "CREATORS": "ERSTELLER",
         "CREDITS": "CREDITS",
-        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download",
-        "Car name": "Car name",
-        "Check out the cost of each part, and the effects of Stage 6 upgrades": "Check out the cost of each part, as well as the effects of the sixth parts!",
-        "City camera speed": "City camera speed",
-        "Click here to change the leaderboard!": "Click here to change the leaderboard!",
-        "Click to change car type!": "Click to change car type!",
-        "DYNO:": "DYNO:",
-        "Download failed, check your internet connection and restart the app": "Failed download, check internet connection and restart app",
-        "Driver": "Driver",
+        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB muss Daten herunterladen: <color= #FFAA0D>{0}</color>, bitte nutze einen Internetzugang ohne Datenbegrenzung.",
+        "Car name": "Modell",
+        "Check out the cost of each part, and the effects of Stage 6 upgrades": "Hier findest du die Preise für Verbesserungen und wie gut alle Stufe 6 Teile sind",
+        "City camera speed": "Geschwindigkeit der Stadtkamera ",
+        "Click here to change the leaderboard!": "Tippe hier, um die Rangliste zu wechseln",
+        "Click to change car type!": "Tippe hier um den Autotyp zu wechseln.",
+        "DYNO:": "PRÜFSTAND:",
+        "Download failed, check your internet connection and restart the app": "Download fehlgeschlagen, prüfe deine Internetverbindung und starte die App neu",
+        "Driver": "Fahrer",
         "ELITE MAX": "ELITE MAX",
-        "ELITE STOCK": "ELITE STOCK",
-        "EXIT": "EXIT",
-        "Effects volume": "Effects volume",
-        "Enable localisation": "Enable localisation",
-        "FAVORITEs": "FAVORITEs",
-        "FINAL DRIVE": "FINAL DRIVE",
-        "FPS limiter": "FPS limiter",
-        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Finally we can see the fastest players and their cars. Come with me, I'll show you!",
-        "Find out how many elite components you need to fully upgrade your car!": "Find out how many elite components you need to fully upgrade your car!",
-        "GRAPHICS": "GRAPHICS",
-        "Gacha imports": "Gacha imports",
-        "Get update!": "Get update!",
-        "Get updated information on how many Legends components you need to restore your car!": "Get up-to-date information on how many Legends components you need to restore your car!",
-        "Graphics quality": "Graphics quality",
-        "I know it already": "I already know",
-        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "For the correct work it is necessary to download additional data, please check your internet connection and try again",
-        "Initializing database...": "Initializing the database...",
-        "LOADING SCREEN": "LOADING SCREEN",
-        "Let's choose the unrestored version": "Let's choose the unrestored version",
-        "Let's go!": "Let's go!",
-        "Let's look at LEGENDS": "Let's look at LEGENDS",
-        "Let's look at this car": "Let's look at this car",
-        "MILESTONE SEASON CAR": "MILESTONE SEASON CAR",
-        "Music clip": "Music clip",
-        "Music volume": "Music volume",
-        "NEW": "NEW",
-        "NITROUS OXIDE": "NITROUS OXIDE",
-        "Number of upgrades and fusion parts": "Number of upgrades and fusion parts",
-        "OFF": "OFF",
-        "ON": "ON",
-        "OPEN CONFIGURATOR": "OPEN CONFIGURATOR",
-        "OTHERS": "OTHERS",
-        "Petrol or electric car": "Petrol or electric car",
-        "Preparing the city...": "Preparing the city...",
-        "Price of full car upgrades": "Price of full car upgrades",
-        "Price of the car:": "Price of the car:",
-        "Quit": "Quit",
-        "RARE IMPORTS": "RARE IMPORTS",
-        "RELEASE iNFO": "RELEASE iNFO",
-        "Rarity": "Rarity",
-        "Records": "Records",
-        "Reset": "Reset",
-        "Restart": "Restart",
-        "SEASON CARS": "SEASON CARS",
-        "SETTINGS": "SETTINGS",
-        "Save": "Save",
-        "Some settings have been changed, save changes?": "Some settings have been changed, save changes?",
+        "ELITE STOCK": "ELITE 0",
+        "EXIT": "VERLASSEN",
+        "Effects volume": "Lautstärke Effekte",
+        "Enable localisation": "Sprache manuell auswählen",
+        "FAVORITEs": "FAVORITEN",
+        "FINAL DRIVE": "ENDÜBERSETZUNG",
+        "FPS limiter": "FPS Limit",
+        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Zum Abschluss lass mich dir die schnellsten Fahrer und deren Fahrzeuge zeigen. Komm!",
+        "Find out how many elite components you need to fully upgrade your car!": "Hier siehst du wie viele Elite Teile du brauchst um das auto maximal aufzubauen",
+        "GRAPHICS": "GRAFIK",
+        "Gacha imports": "Seltene Importe",
+        "Get update!": "Update laden!",
+        "Get updated information on how many Legends components you need to restore your car!": "Erhalte aktuelle Infos, wie viele Legenden Komponenten du brauchst um dein Auto zu restaurieren!",
+        "Graphics quality": "Grafikqualität",
+        "I know it already": "Überspringen",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Um alle Funktionen der App nutzen zu können müssen zusätzliche Daten heruntergeladen werden. Bitte überprüfe deine Internetverbindung und versuche es erneut.",
+        "Initializing database...": "Datenbank initialisieren...",
+        "LOADING SCREEN": "LADEBILDSCHIRM",
+        "Let's choose the unrestored version": "Lass uns die unrestaurierte Variante auswählen",
+        "Let's go!": "Los gehts!",
+        "Let's look at LEGENDS": "Lass uns auf LEGENDS schauen",
+        "Let's look at this car": "Wie wär's mit diesem Auto",
+        "MILESTONE SEASON CAR": "MEILENSTEIN SEASON AUTO",
+        "Music clip": "Musik",
+        "Music volume": "Musik-Lautstärke",
+        "NEW": "NEU",
+        "NITROUS OXIDE": "NITRO",
+        "Number of upgrades and fusion parts": "Anzahl an Verbesserungen und Fusionsteilen",
+        "OFF": "AUS",
+        "ON": "AN",
+        "OPEN CONFIGURATOR": "KONFIGURATOR ÖFFNEN",
+        "OTHERS": "ANDERE",
+        "Petrol or electric car": "Verbrenner- oder Elektro- Auto",
+        "Preparing the city...": "Die Stadt vorbereiten...",
+        "Price of full car upgrades": "Preis für alle Verbesserungen",
+        "Price of the car:": "Preis des Autos:",
+        "Quit": "Verlassen",
+        "RARE IMPORTS": "SELTENE IMPORTE",
+        "RELEASE iNFO": "RELEASE INFO",
+        "Rarity": "Seltenheit",
+        "Records": "Rekorde",
+        "Reset": "Zurücksetzen",
+        "Restart": "Neustarten",
+        "SEASON CARS": "SEASONAUTOS",
+        "SETTINGS": "EINSTELLUNGEN",
+        "Save": "Speichern",
+        "Some settings have been changed, save changes?": "Einige Einstellungen wurden geändert, soll gespeichert werden?",
         "Start": "Start",
-        "TIRE PRESSURE": "TIRE PRESSURE",
-        "There's finally an AUTOSHOW in the city, let me show you around?": "There's finally an AUTOSHOW in city, let me show you around?",
-        "This car can be obtained by defeating the boss": "This car can be obtained by defeating the boss",
-        "This car cannot be obtained anywhere": "This car cannot be obtained anywhere",
-        "This car is a part of a collection and can be purchased with collection credits.": "This car is part of a collection and can be purchased with collection credits.",
-        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "This is the AUTOSHOW - information about all the cars are collected here! Let's see",
-        "This is the podium, the best cars and drivers show off here": "This is the podium, the best cars and drivers show off here",
-        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.",
-        "Time": "Time",
-        "Total needed:": "Total needed:",
-        "UNRESTORED": "UNRESTORED",
-        "UPGRADE DETAILED INFO": "UPGRADE DETAILED INFO",
-        "Updating the database...": "Updating the database...",
-        "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
-        "WORLD RECORDS": "WORLD RECORDS",
-        "WR CAR RATING": "WR CAR RATING",
-        "You can add important cars to favorites": "You can add important cars to favorites",
-        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "You can find the car you need by manufacturers or car groups. There is even a favorites section!",
-        "You can go straight to the AUTOSHOW, just click on the car!": "You can go straight to the AUTOSHOW, just click on the car!",
-        "You can mark the cars you owned": "You can mark the cars you owned",
-        "You can see the best tuning settings here": "Here you can see the best tuning settings",
-        "You can see the visual specs here": "You can see the visual specs here",
-        "You could have won this car in the following seasons:": "This car could have won the teams championship. In the following seasons:",
-        "text coming soon...": "text coming soon..."
+        "TIRE PRESSURE": "REIFENDRUCK",
+        "There's finally an AUTOSHOW in the city, let me show you around?": "Es gibt endlich eine AUTOSHOW in der Stadt, komm ich zeig sie dir!",
+        "This car can be obtained by defeating the boss": "Dieses Auto erhälts du für das besiegen eines Bosses",
+        "This car cannot be obtained anywhere": "Dieses Auto kann man nicht erhalten",
+        "This car is a part of a collection and can be purchased with collection credits.": "Dieses Auto ist Teil einer Sammlung und mit Sammlungsmünzen gekauft werden.",
+        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Das ist die AUTOSHOW - hier werden Infos zu allen Autos gesammelt. Schau's dir mal an.",
+        "This is the podium, the best cars and drivers show off here": "Das ist das Podium, die besten Autos und Fahrer protzen hier.",
+        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Dieses Tool wurde zum sammeln und kombinieren von Informationen erstellt!\n\nFast alle Inhalte sind aus CSR2 und gehören NaturalMotion => Zynga => Take-Two Interactive. Die genutzten Inhalte werden nur zum Anzeigen von Informationen der Community genutzt und sonst nichts.",
+        "Time": "Zeit",
+        "Total needed:": "Insgesammt gebraucht:",
+        "UNRESTORED": "UNRESTAURIERT",
+        "UPGRADE DETAILED INFO": "DETAILIERTE VERBESSERUNGSINFOS",
+        "Updating the database...": "Datenbank aktualisieren...",
+        "Very Low|Low|Medium|High|Very High|Ultra": "Sehr Niedrig|Niedrig|Medium|Hoch|Sehr High|Ultra",
+        "WORLD RECORDS": "WELTREKORDE",
+        "WR CAR RATING": "WR AUTO BEWERTUNG",
+        "You can add important cars to favorites": "Die kannt dir wichtige Autos als Favorit markieren",
+        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Du kannst Autos nach Marke oder nach Gruppe suchen. Es gibt sogar ein Favoriten-Bereich!",
+        "You can go straight to the AUTOSHOW, just click on the car!": "Dukannst direkt zur AUTOSHOW gehen, tippe einfach auf den Namen!",
+        "You can mark the cars you owned": "Du kannst Autos als in besitzt markieren",
+        "You can see the best tuning settings here": "Hier siehst du die besten Tuning-Einstellungen",
+        "You can see the visual specs here": "Hier kannst du auf Import-Varianten zugreifen",
+        "You could have won this car in the following seasons:": "Dieses Auto konnte in folgender Saison gewonnen werden:",
+        "text coming soon...": "Text kommt bald..."
     }
 }
